Enduring issues page + other fixes

--- a/src/views/enduring.hbs
+++ b/src/views/enduring.hbs
@@ -1,17 +1,26 @@
 ﻿---
 name: enduring
 ---
-<h2>Enduring Issues<h2>
+<h2>Enduring Issues</h2>
 
-<h3>1. Constituent Service</h3>
-<p>After the Keating Five case ended, the Senate formed a committee to consider new rules concerning constituent service and involvement with administrative agencies. That committee ultimately made recommendations that focused largely on campaign donations and avoiding any nexus between actual donations and specific acts of constituent service. Those recommendations leave open the question of how to distinguish proper forms of constituent service from improper ones.</p>
+<ul id="enduring-pager" class="nav nav-pills">
+  <li><a href="#page1">Constituent Service</a></li>
+  <li><a href="#page2">The Structure of Ethics Regulation</a></li>
+  <li><a href="#page3">Campaign Finance Reform</a></li>
+</ul>
 
-<h3>2. The Structure of Ethics Regulation</h3>
+<div class="enduring-page" id="page1">
+<h3>Constituent Service</h3>
+<p>After the Keating Five case ended, the Senate formed a committee to consider new rules concerning constituent service and involvement with administrative agencies. That committee ultimately made recommendations that focused largely on campaign donations and avoiding any nexus between actual donations and specific acts of constituent service. Those recommendations leave open the question of how to distinguish proper forms of constituent service from improper ones. For more information click <a href="/resources">here</a>.</p>
+</div>
+
+<div class="enduring-page" id="page2">
+<h3>The Structure of Ethics Regulation</h3>
 <p>Another enduring issue concerns the quality and effectiveness of ethics regulation in Senate, and Congress at large. Some critics of the Keating Five proceedings concluded that key decisions about who to charge in the case were tainted by party politics. Others have argued that the Senate was embarrassed enough by the Keating Five proceedings that they have avoided any similar spectacles since then. Is any elected body capable of regulating itself in a manner that avoids partisan politics? Aren’t most forms of self-regulation prone to problems of leniency? The House, in contrast, formed an “independent” ethics committee to address the problems created by partisanship. There are also various forms of ethics commissions at the state level that are structured to minimize or balance partisan interests. Are these forms of regulation preferable, or do they suffer from a lack of sufficient democratic checks?</p>
 
 <ul>
-  <li>For more information about the Congressional ethics process, click here. <!--TODO:(link to Ethics Committee page)--></li>
-  <li>For more information about state ethics processes, click here. <!--TODO(link to state ethics info. Page)--></li>
+  <li>For more information about the Congressional ethics process, click <a href="http://www.ethics.senate.gov/public/index.cfm/aboutus?p=committee-members">here</a>.</li>
+  <li>For more information about state ethics processes, click <a href="http://www.ncsl.org/legislatures-elections/ethicshome/state-ethics-commissions.aspx">here</a>.</li>
 </ul>
 
 <h3>The Senate Ethics Committee</h3>
@@ -50,7 +59,7 @@ name: enduring
 <p>Two Board members (one appointed by the Speaker of the House and one appointed by the Minority Leader) may authorize a preliminary review if all available information provides a reasonable basis to believe that a violation may have occurred.</p>
 <p>Second-Phase Review</p>
 <p>Three Board members may authorize a second-phase review if all available information provides probable cause to believe a violation may have occurred. At the end of any second-phase review, the Board must recommend to the Committee on Ethics either that the matter requires the Committee's further review or that it should dismiss the matter.</p>
-<p>For more information, please click here. [link to process1.jpg]</p>
+<p>For more information, please click <a href="/img/process1.jpg">here</a>.</p>
 
 <p>In the House, the investigations are supposedly nonpartisan, while the adjudication and punishment are still decided by partisan politicians. In the Senate, partisan Members fill both roles – they both conduct the investigation and determine any resulting consequences. It is important to note that in all but one set of circumstances, the report and findings of the OCE Board must be publicly released. (The only time this is not true is when they have voted to dismiss the matter). There is prescribed formula for when reviews are released and when they are not.</p>
 
@@ -66,9 +75,11 @@ name: enduring
 
 <p>Most states have bodies that regulate the ethics of legislators and state government at large. As of October 2011, only seven had no such regulator. Does the absence of a state-mandates ethics watchdog negatively impact the quality of policymaking in these states? In some states, though, there are separate ethics bodies for legislators and the state government.</p>
 
-<p>For detailed information on each state, click here. (http://www.ncsl.org/legislatures-elections/ethicshome/state-ethics-commissions.aspx)</p>
+<p>For detailed information on each state, click <a href="http://www.ncsl.org/legislatures-elections/ethicshome/state-ethics-commissions.aspx">here</a>.</p>
+</div>
 
-<h3>3. Campaign finance reform</h3>
+<div class="enduring-page" id="page3">
+<h3>Campaign Finance Reform</h3>
 
 <p>$43,526,589. That was the cost of Ohio’s hard-fought 2012 Senate election. This spending isn’t limited to battleground states either. Dye-in-the-wool blue Massachusetts spent $82,390,661 on its Senate contest that year. House elections commonly run into the multi-millions dollars category, too. Due to the prohibitively high cost of participating in a Federal election today, many see the electoral process as ripe for manipulation by special interests. This is why many have advocated some form of campaign finance reform over the past half-century. Much of the Keating Five scandal revolves around influence peddling through campaign donations. Is campaign finance reform a viable solution that could of lessened he ability of Keating to impact government – or prevent the Keating Five affair from ever occurring?</p>
 
@@ -81,8 +92,23 @@ name: enduring
 <p>While various reform attempts were introduced in Congress over the 80s and 90s, none prevailed. It was becoming clear, however, that the impact of “soft money,” or political donations made in such a way as to avoid federal regulations or limits, e.g. by donating to a party organization rather than to a particular candidate or campaign, also had to be addressed for the FECA to achieve its desired reforms. The next major iteration of campaign finance legislation, the Bipartisan Campaign Reform Act of 2002, addressed this. Commonly known as the McCain-Feingold Act after its chief sponsors, Senators Russ Feingold (D-WI) and John McCain (R-AZ), it was enacted on March 7, 2002 and became effective November 6, 2002. There were two core issues the Act sought to address. First, it tried to curtail the use of increased role of “soft money.” The Act addressed this by prohibiting national political party committees from raising or spending any funds not subject to Federal limits, even for state and local races or issue discussion. The second goal was to minimize the proliferation of “issue advocacy ads,” such as ads specifically mentioning Congressional legislation, but indirectly targeting Federal representatives. This was accomplished by redefining “electioneering communications” and prohibiting any such ad paid for by a corporation (including non-profit issue organizations) or unincorporated entity. McCain-Feingold’s broad effect was to limit both the sources of funds and the amount they could donate to Federal campaigns. One of the most visible to American voters, however, is the so-called “stand by your ad” provision, prompting most campaign advertisements to now include a verbal statement similar to “I'm <Candidate X> and I approve this message.”</p>
 
 <p><em>Citizens United</em></p>
-<p>Citizens United v. Federal Election Commission, 558 U.S. 310 (2010), is a landmark case that blunted the impact of McCain-Feingold in election administration. The Supreme Court held that the First Amendment LINK prohibits the government from restricting political independent expenditures by corporations, associations, or labor unions. The suit stemmed from the conservative lobbying group Citizens United, who wanted to air a film critical of Hillary Clinton and to advertise the film during television, violating the Act. In a 5–4 decision, the Court struck down portions of the Act that prohibited corporations (including nonprofit corporations) and unions from making independent expenditures and "electioneering communications,” on the basis that they violated the First Amendment.</p>
+<p>Citizens United v. Federal Election Commission, 558 U.S. 310 (2010), is a landmark case that blunted the impact of McCain-Feingold in election administration. The Supreme Court <a href="http://www.law.cornell.edu/supct/html/08-205.ZS.html">held</a> that the First Amendment prohibits the government from restricting political independent expenditures by corporations, associations, or labor unions. The suit stemmed from the conservative lobbying group Citizens United, who wanted to air a film critical of Hillary Clinton and to advertise the film during television, violating the Act. In a 5–4 decision, the Court struck down portions of the Act that prohibited corporations (including nonprofit corporations) and unions from making independent expenditures and "electioneering communications,” on the basis that they violated the First Amendment.</p>
 
 <p>Beginning with the 2012 election cycle, this gave rise to so-called “super PACs,” officially known as "independent-expenditure only committees.” These specialty political action committees (PACs) may not make contributions to candidates’ campaigns or parties, but may engage in unlimited political spending independently of the campaigns. By doing so, they can also raise funds from corporations, unions and other groups, without any legal limit on donation size (in contrast to traditional PACs). It is important to note that Citizens United did not overturn the ban on foreign corporations and nationals from contributing or spending funds in connection with any election in the United States.</p>
 
 <p>Election spending source: http://www.opensecrets.org/overview/topraces.php</p>
+</div>
+
+<script type="text/javascript">
+  (window.onhashchange = function(){
+    var sel = window.location.hash || '#page1';
+    $('.enduring-page').hide();
+    $(sel).show();
+    $('#enduring-pager .active').removeClass('active');
+    $('#enduring-pager li a[href="' + sel + '"]').parent().addClass('active');
+  })();
+  
+  /*$('#enduring-pager li').click(function(){
+    //window.on($(this).find('a').attr('href'));
+  });*/
+</script>
