--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -10,7 +10,7 @@ FHLB-SF – Federal Home Loan Bank of San Francisco<br />
 FHLBB – Federal Home Loan Bank Board<br />
 FSLIC – Federal Savings and Loan Insurance Corporation<br />
 RTC – Resolution Trust Corporation<br />
-S&L - Savings & loan bank (i.e. thrift bank)<br />
+S&L – Savings & loan bank (i.e. thrift bank)<br />
 </div>
 <div class="evidence-wrapper">
 <div class="evidence-panel">
@@ -23,7 +23,7 @@ S&L - Savings & loan bank (i.e. thrift bank)<br />
                 <a href="/files/evidence/7">Henkel Resigns FHLBB Post, Criticizes Justice Dept. Probe</a><br />
                 <a href="/files/evidence/8">S&amp;L High Rollers Target Reformer</a><br />
                 <a href="/files/evidence/9">Savings &amp; Loans &amp; Intrigue &amp; 'Meddling'</a><br />
-                <a href="/files/evidence/10">The $150 Billon Calamity</a><br />
+                <a href="/files/evidence/10">The $150 Billion Calamity</a><br />
                 <a href="/files/evidence/11">Bank Board Chief, Critic Are Feuding</a><br />
                 <a href="/files/evidence/12">The Savings and Loan Crisis</a>
 </div>
