--- a/src/views/resources.hbs
+++ b/src/views/resources.hbs
@@ -6,7 +6,7 @@ name: resources
 
 <p>b. McCrone, Donald, James Kuklinski. <a href="/files/downloads/Delegate-Theory.pdf">"The Delegate Theory of Representation"</a>"The Delegate Theory of Representation". <i>American Journal of Political Science</i>, Vol. 23, No. 2. Midwest Political Science Association, May 1979.</p>
 
-<h2>S &amp; L</h2>
+<h2>S&amp;Ls</h2>
 <p>a. Glassman, James K. <a href="/files/downloads/SL-Background-Glassman-Overview.pdf">"The Great Banks Robbery"</a>. <i>The New Republic</i>, October 8, 1990.</p>
 
 <p>b. Edwin Gray, FHLB Chair, Senate Ethics Committee Hearing. <a href="/files/downloads/SL-Background-Ed-Gray-Testimony.pdf">Excerpt from Opening Statement</a>.</p>
