--- a/src/partials/nav.hbs
+++ b/src/partials/nav.hbs
@@ -17,7 +17,14 @@
       <li{{#is name 'about'}} class="active"{{/is}}><a href="/about">Overall Story</a></li>
       <li{{#is name 'timeline'}} class="active"{{/is}}><a href="/timeline">Timeline</a></li>
       <li{{#is name 'actors'}} class="active"{{/is}}><a href="/actors">Actors</a></li>
-      <li{{#is name 'enduring'}} class="active"{{/is}}><a href="/enduring">Enduring Issues</a></li>
+      <li class="dropdown{{#is name 'enduring'}} active{{/is}}">
+        <a href="/enduring" class="dropdown-toggle" data-toggle="dropdown">Enduring Issues <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="/enduring#page1">Constituent Service</a></li>
+          <li><a href="/enduring#page2">The Structure of Ethics Regulation</a></li>
+          <li><a href="/enduring#page3">Campaign Finance Reform</a></li>
+        </ul>
+      </li>
       <li{{#is name 'resources'}} class="active"{{/is}}><a href="/resources">Related Issues</a></li>
       <li{{#is name 'evidence'}} class="active"{{/is}}><a href="/evidence">Additional Information</a></li>
     </ul>
