--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -123,3 +123,7 @@ div#footer-content table td {
     font-size : 1.2em;
     margin-bottom: 5px;
 }
+
+#search-result-modal .modal-dialog {
+  width: 80%;
+}
