--- a/src/partials/nav.hbs
+++ b/src/partials/nav.hbs
@@ -28,11 +28,45 @@
       <li{{#is name 'resources'}} class="active"{{/is}}><a href="/resources">Related Issues</a></li>
       <li{{#is name 'evidence'}} class="active"{{/is}}><a href="/evidence">Additional Information</a></li>
     </ul>
-    <form class="navbar-form navbar-right" action="" role="search">
+    <form class="navbar-form navbar-right" action="" role="search" onsubmit="return !(!executeQuery() && $('#search-result-modal').modal());">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" placeholder="Search" id="cse-search-input-box-id">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
   </div><!-- /.navbar-collapse -->
 </nav>
+<div class="modal fade" id="search-result-modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Search Results</h4>
+      </div>
+      <div class="modal-body" id="search-results"></div>
+    </div>
+  </div>
+</div>
+<script src="//www.google.com/jsapi" type="text/javascript"></script>
+<script type="text/javascript">
+  google.load('search', '1',
+      {language : 'en', style : google.loader.themes.SHINY});
+  
+  var customSearchControl = null;
+  google.setOnLoadCallback(function() {
+    customSearchControl = new google.search.CustomSearchControl('004598588032668485318:pashkchxabg');
+    customSearchControl.setLinkTarget(google.search.Search.LINK_TARGET_SELF);
+    var options = new google.search.DrawOptions();
+    customSearchControl.draw('search-results', options);
+  }, true);
+  
+  function executeQuery() {
+    var input = document.getElementById('cse-search-input-box-id');
+    if (input.value == '') {
+      customSearchControl.clearAllResults();
+    } else {
+      customSearchControl.execute(input.value)
+    }
+    return false;
+  }
+</script>
