Superscript touch ups

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -338,7 +338,7 @@ the Fighting For</I></FONT><FONT COLOR="#2c1614">, McCain wrote that
 he remained &ldquo;a little troubled&rdquo; at the prospect, &ldquo;but
 since the chairman of the Bank Board didn't seem to have a problem
 with the idea, maybe a discussion with the regulators wouldn&rsquo;t
-be as problematic as I had earlier thought&rdquo;</FONT><FONT COLOR="#2c1614"><SUP>5</SUP></FONT><FONT COLOR="#2c1614">.
+be as problematic as I had earlier thought&rdquo;.<FONT COLOR="#2c1614"><SUP>5</SUP></FONT></FONT><FONT COLOR="#2c1614">
 McCain testified that he did not sense Gray nor the thrift examiners
 felt threatened by the senators&rsquo; questioning.</FONT></P>
 <P STYLE="text-indent: 0.44in; margin-bottom: 0in"><FONT COLOR="#2c1614">According
