--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -26,7 +26,7 @@ Lincoln, saying he needed to protect his family from the intense media
 scrutiny. Henkel later reached an agreement with the FHLBB’s 
 successor agency that banned him from the banking and thrift 
 industries. However, he neither admitted nor denied the charges, and 
-continues to “categorically den[y] any wrongdoing.”1
+continues to “categorically den[y] any wrongdoing.”<sup>1</sup>
 Henkel said he agreed to the settlement only to avoid the cost of litigation.</p>
 
 <hr />
