--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -19,7 +19,7 @@ S&L – Savings & loan bank (i.e. thrift bank)<br />
                 <a href="/files/evidence/3">Bank Board Clears Henkel of Conflict Charge</a><br />
                 <a href="/files/evidence/4">S&amp;L Regulator Feuds With Lincoln Chief</a><br />
                 <a href="/files/evidence/5">Everything's Black and White When It Comes to Ed Gray</a><br />
-                <a href="/files/evidence/6">Gray Reimbursed Home Loan Banks for Wife's Travles</a><br />
+                <a href="/files/evidence/6">Gray Reimbursed Home Loan Banks for Wife's Travels</a><br />
                 <a href="/files/evidence/7">Henkel Resigns FHLBB Post, Criticizes Justice Dept. Probe</a><br />
                 <a href="/files/evidence/8">S&amp;L High Rollers Target Reformer</a><br />
                 <a href="/files/evidence/9">Savings &amp; Loans &amp; Intrigue &amp; 'Meddling'</a><br />
