--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -58,7 +58,7 @@ href="/actors/supporting_cast/Ed-Gray" title="" target="">Ed Gray</a>, the Bank 
 went to Riegle's office to briefly discuss the issue. McCain testified that nothing came of the meeting.</p><p>On March 
 19th, McCain's office <a href="/files/exhibits/Lincoln/%233%20Arthur%20Young%20Letter%2003-17-87.pdf">received</a> the Arthur Young letter
 with the business card of one of Keating's staff attached. During the hearing, VanPaasschen testified it was 
-"perplexing to her that they would receive a letter from Arthur Yong to Senator Riegle regarding on of their 
+"perplexing to her that they would receive a letter from Arthur Young to Senator Riegle regarding on of their 
 constituents." The same day, McCain and VanPaasschen met with <a href="/actors/senators/Dennis-DeConcini" title="" 
 target="">Senator DeConcini</a> and his banking aid, <a href="/actors/aides/Laurie-Sedlmayr" title="" target="">Laurie 
 Sedlmayr</a>, to discuss further Keating's complaints. DeConcini testified that, during that meeting, he suggested that 
