--- a/src/views/timeline.hbs
+++ b/src/views/timeline.hbs
@@ -7,6 +7,8 @@ Jan-May 1987 is expanded in the second timeline below.<br />
 Click <a href="/timeline-data">here</a> for data in table format.</p>
 <div id="timeline" style="overflow:hidden;"></div>
 <div id="title" style="height: 150px;"></div>
+<div class="controls" id="controls"></div>
 <div id="mtimeline" style="overflow:hidden;"></div>
 <div id="mtitle" style="height: 150px;"></div>
-<script type="text/javascript">timeline();</script>
+<script type="text/javascript" onload="timeline();" src="/files/timeline/timeline_js/timeline-api.js"></script>
+<script type="text/javascript">/*timeline();*/</script>
