Proof of payment link on Atchison

--- a/src/views/actors/affiliates/Jack-Atchison.hbs
+++ b/src/views/actors/affiliates/Jack-Atchison.hbs
@@ -4,6 +4,14 @@ name: actors
 
 <h2>Jack Atchison</h2>
 
+<div class="right-column">
+    <h2>Exhibits</h2>
+    <ul>
+                <li><a href="/files/exhibits/Atchison/13.pdf">Proof of Payment</a></li>
+            </ul>
+    </div>
+
+    
 <p>Arthur Young accountant and Lincoln employee</p>
 
 <p>
