Superscripts and footnotes

--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -12,7 +12,7 @@ name: home
 <p>Welcome to "Understanding the Keating Five," the only comprehensive 
 website on the infamous Keating Five scandal. What started as a meeting
 between a group of U.S. Senators and the head of the Federal Home Loan Bank Board
-ended with a lengthy and nationally­televised hearing of the Senate Ethics
+ended with a lengthy and nationally-televised hearing of the Senate Ethics
 Committee. The hearings investigated the relationship between savings & loan (S&L)
 tycoon Charles Keating and five Senators. They raise important
 issues about ethics, representation, and democracy. Did some (or all) of the
