Updates for VanPaasschen, Gray

--- a/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
+++ b/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
@@ -13,8 +13,8 @@ name: actors
         
         <h2>Video</h2>
     <ul>
-                <li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">VanPaasschen - Part I</a> (Good Government students only)</li>
-                <li><a href="/videos/VanPaasschen">VanPaasschen - Part II</a></li>
+                <!--<li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">VanPaasschen - Part I</a> (Good Government students only)</li>-->
+                <li><a href="/videos/VanPaasschen">VanPaasschen - Part I</a></li>
             </ul>
     </div>
 
