--- a/src/views/actors/supporting_cast/Ed-Gray.hbs
+++ b/src/views/actors/supporting_cast/Ed-Gray.hbs
@@ -28,7 +28,7 @@ name: actors
         
         <h2>Video</h2>
     <ul>
-                <li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">Gray - Part I</a> (Good Government students only)</li>
+                <li><a href="/videos/Gray - Part I">Gray - Part I</a> (Good Government students only)</li>
                 <li><a href="/videos/Gray - Part II">Gray - Part II</a></li>
                 <li><a href="/videos/Gray - Part III">Gray - Part III</a></li>
             </ul>
