--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="/css/styles.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="http://simile.mit.edu/timeline/api/timeline-api.js" type="text/javascript"></script>
+    <script src="/files/timeline_examples.js" type="text/javascript"></script>
     <script src="/js/scripts.js"></script>
   </head>
   <body>
