--- a/src/views/timeline.hbs
+++ b/src/views/timeline.hbs
@@ -5,10 +5,161 @@ name: timeline
 Hover over event to see details below.
 Jan-May 1987 is expanded in the second timeline below.<br />
 Click <a href="/timeline-data">here</a> for data in table format.</p>
-<div id="timeline" style="overflow:hidden;"></div>
-<div id="title" style="height: 150px;"></div>
-<div class="controls" id="controls"></div>
-<div id="mtimeline" style="overflow:hidden;"></div>
-<div id="mtitle" style="height: 150px;"></div>
-<script type="text/javascript" onload="timeline();" src="/files/timeline/timeline_js/timeline-api.js"></script>
-<script type="text/javascript">/*timeline();*/</script>
+
+    
+<div id="tl" class="timeline-default" style="height: 400px;">
+</div>
+<div class="footnotes">
+    All times are in Dallas CST (GMT-0600).
+</div>
+
+<div class="controls" id="controls">
+</div>
+
+<script>
+    var tl;
+    var eventSource = new Timeline.DefaultEventSource();
+    
+    var zones = [
+        /*{   start:    "Fri Nov 22 1963 00:00:00 GMT-0600",
+            end:      "Mon Nov 25 1963 00:00:00 GMT-0600",
+            magnify:  10,
+            unit:     Timeline.DateTime.DAY
+        },
+        {   start:    "Fri Nov 22 1963 09:00:00 GMT-0600",
+            end:      "Sun Nov 24 1963 00:00:00 GMT-0600",
+            magnify:  5,
+            unit:     Timeline.DateTime.HOUR
+        },
+        {   start:    "Fri Nov 22 1963 11:00:00 GMT-0600",
+            end:      "Sat Nov 23 1963 00:00:00 GMT-0600",
+            magnify:  5,
+            unit:     Timeline.DateTime.MINUTE,
+            multiple: 10
+        },
+        {   start:    "Fri Nov 22 1963 12:00:00 GMT-0600",
+            end:      "Fri Nov 22 1963 14:00:00 GMT-0600",
+            magnify:  3,
+            unit:     Timeline.DateTime.MINUTE,
+            multiple: 5
+        }*/
+        {   start:    "1/1/1972",
+            end:      "4/1/1990",
+            magnify:  1,
+            unit:     Timeline.DateTime.YEAR,
+            multiple: 18
+        }
+    ];
+    var zones2 = [
+        /*{   start:    "Fri Nov 22 1963 00:00:00 GMT-0600",
+            end:      "Mon Nov 25 1963 00:00:00 GMT-0600",
+            magnify:  10,
+            unit:     Timeline.DateTime.WEEK
+        },
+        {   start:    "Fri Nov 22 1963 09:00:00 GMT-0600",
+            end:      "Sun Nov 24 1963 00:00:00 GMT-0600",
+            magnify:  5,
+            unit:     Timeline.DateTime.DAY
+        },
+        {   start:    "Fri Nov 22 1963 11:00:00 GMT-0600",
+            end:      "Sat Nov 23 1963 00:00:00 GMT-0600",
+            magnify:  5,
+            unit:     Timeline.DateTime.MINUTE,
+            multiple: 60
+        },
+        {   start:    "Fri Nov 22 1963 12:00:00 GMT-0600",
+            end:      "Fri Nov 22 1963 14:00:00 GMT-0600",
+            magnify:  3,
+            unit:     Timeline.DateTime.MINUTE,
+            multiple: 15
+        }*/
+        {   start:    "1/1/1972",
+            end:      "4/1/1990",
+            magnify:  1,
+            unit:     Timeline.DateTime.MONTH,
+            multiple: 18
+        }
+    ];
+    
+    var theme = Timeline.ClassicTheme.create();
+    theme.event.label.width = 250; // px
+    theme.event.bubble.width = 250;
+    theme.event.bubble.height = 200;
+    
+    var date = "10/1/1986"
+    var bandInfos = [
+        Timeline.createHotZoneBandInfo({
+            width:          "75%", 
+            intervalUnit:   Timeline.DateTime.MONTH, 
+            intervalPixels: 200,
+            zones:          zones,
+            eventSource:    eventSource,
+            date:           date,
+            timeZone:       -6,
+            theme:          theme
+        }),
+        Timeline.createHotZoneBandInfo({
+            width:          "25%", 
+            intervalUnit:   Timeline.DateTime.YEAR, 
+            intervalPixels: 200,
+            zones:          zones2, 
+            eventSource:    eventSource,
+            date:           date, 
+            timeZone:       -6,
+            showEventText:  false, 
+            trackHeight:    0.5,
+            trackGap:       0.2,
+            theme:          theme
+        })
+    ];
+    bandInfos[1].syncWith = 0;
+    bandInfos[1].highlight = true;
+    bandInfos[1].eventPainter.setLayout(bandInfos[0].eventPainter.getLayout());
+    
+    /*for (var i = 0; i < bandInfos.length; i++) {
+        bandInfos[i].decorators = [
+            new Timeline.SpanHighlightDecorator({
+                startDate:  "Fri Nov 22 1963 12:30:00 GMT-0600",
+                endDate:    "Fri Nov 22 1963 13:00:00 GMT-0600",
+                color:      "#FFC080",
+                opacity:    50,
+                startLabel: "shot",
+                endLabel:   "t.o.d.",
+                theme:      theme
+            }),
+            new Timeline.PointHighlightDecorator({
+                date:       "Fri Nov 22 1963 14:38:00 GMT-0600",
+                color:      "#FFC080",
+                opacity:    50,
+                theme:      theme
+            }),
+            new Timeline.PointHighlightDecorator({
+                date:       "Sun Nov 24 1963 13:00:00 GMT-0600",
+                color:      "#FFC080",
+                opacity:    50,
+                theme:      theme
+            })
+        ];
+    }*/
+    
+    tl = Timeline.create(document.getElementById("tl"), bandInfos, Timeline.HORIZONTAL);
+    tl.loadJSON("/files/timeline2.json", function(json, url) {
+      /*json.events.forEach(function(e) {
+        if (e.link) {
+          e.title = e.title.replace(/\{(.+)\}/, '<a href="' + e.link + '">$1</a>');
+        }
+      });*/
+      eventSource.loadJSON(json, url);
+    });
+    
+    setupFilterHighlightControls(document.getElementById("controls"), tl, [0,1], theme);
+    var resizeTimerID = null;
+    function onResize() {
+        if (resizeTimerID == null) {
+            resizeTimerID = window.setTimeout(function() {
+                resizeTimerID = null;
+                tl.layout();
+            }, 500);
+        }
+    }
+</script>
