Actor page changes

--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -15,18 +15,19 @@ name: actors
      
     <h2>Exhibits</h2>
     <ul>
-    <li><a href="/files/exhibits/McCain/%231 McCain to Gray 05-25-89.pdf">Exhibit #1 McCain to Gray 05-25-89</a></li>
-<li><a href="/files/exhibits/McCain/%232 Gray's Response to (1) 05-30-89.pdf">Exhibit #2 Gray's Response to (1) 05-30-89</a></li>
-<li><a href="/files/exhibits/McCain/%233 McCain's Response to (2) 06-02-89.pdf">Exhibit #3 McCain's Response to (2) 06-02-89</a></li>
-<li><a href="/files/exhibits/McCain/%234 McCain Press Release 07-25-89.pdf">Exhibit #4 McCain Press Release 07-25-89</a></li>
-<li><a href="/files/exhibits/McCain/%235 McCain to Gray 08-08-84.pdf">Exhibit #5 McCain to Gray 08-08-84</a></li>
-<li><a href="/files/exhibits/McCain/%236 McCain to Gray 07-21-86.pdf">Exhibit #6 McCain to Gray 07-21-86</a></li>
-<li><a href="/files/exhibits/McCain/%237 McCain Office Memo 11-03-86.pdf">Exhibit #7 McCain Office Memo 11-03-86</a></li>
-<li><a href="/files/exhibits/McCain/%238 McCain Office Memo 03-24-87.pdf">Exhibit #8 McCain Office Memo 03-24-87</a></li>
-                <li><a href="/files/evidence/13">Exhibit #9: Memo, to McCain from VanPaasschen, Banking Aide</a></li>
-                <li><a href="/files/evidence/19">Exhibit #10: Memo, VanPaasschen to McCain, "Talking Points for Meeting with Ed Gray"</a></li>
+      <li><a href="/files/exhibits/McCain/%231 McCain to Gray 05-25-89.pdf">Exhibit #1 McCain to Gray 05-25-89</a></li>
+      <li><a href="/files/exhibits/McCain/%232 Gray's Response to (1) 05-30-89.pdf">Exhibit #2 Gray's Response to (1) 05-30-89</a></li>
+      <li><a href="/files/exhibits/McCain/%233 McCain's Response to (2) 06-02-89.pdf">Exhibit #3 McCain's Response to (2) 06-02-89</a></li>
+      <li><a href="/files/exhibits/McCain/%234 McCain Press Release 07-25-89.pdf">Exhibit #4 McCain Press Release 07-25-89</a></li>
+      <li><a href="/files/exhibits/McCain/%235 McCain to Gray 08-08-84.pdf">Exhibit #5 McCain to Gray 08-08-84</a></li>
+      <li><a href="/files/exhibits/McCain/%236 McCain to Gray 07-21-86.pdf">Exhibit #6 McCain to Gray 07-21-86</a></li>
+      <li><a href="/files/exhibits/McCain/%237 McCain Office Memo 11-03-86.pdf">Exhibit #7 McCain Office Memo 11-03-86</a></li>
+      <li><a href="/files/exhibits/McCain/%238 McCain Office Memo 03-24-87.pdf">Exhibit #8 McCain Office Memo 03-24-87</a></li>
+      <li><a href="/files/exhibits/McCain/%239 Memo, to McCain from VanPaasschen, Banking Aide 04-02-87.pdf">Exhibit #9: Memo, to McCain from VanPaasschen, Banking Aide</a></li>
+      <li><a href="/files/evidence/19">Exhibit #10: Memo, VanPaasschen to McCain, "Talking Points for Meeting with Ed Gray"</a></li>
+      <li><a href="/files/exhibits/McCain/%2311 Memo, VanPaasschen to McCain, Overview of AAC Involvement 04-14-89.pdf">Exhibit #11: Memo, VanPaasschen to McCain, Overview of AAC Involvement</a></li>
                 
-            </ul>
+    </ul>
             
     <h2>Videos</h2>
     <ul>
