--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -7,7 +7,7 @@ name: actors
 <div class="right-column">
     <h2>Exhibits</h2>
     <ul><li><a href="/files/exhibits/Henkel/%231 Lincoln Defending Henkel 02-25-87.pdf">Exhibit #1 Lincoln Defending Henkel 02-25-87</a></li>
-<li><a href="/files/exhibits/Henkel/%232 _Not Public Info._ Henkel to Proxmire 01-16-87.pdf">Exhibit #2 _Not Public Info._ Henkel to Proxmire 01-16-87</a></li>
+<li><a href="/files/exhibits/Henkel/%232 _Not Public Info._ Henkel to Proxmire 01-16-87.pdf">Exhibit #2 "Not Public Info." Henkel to Proxmire 01-16-87</a></li>
 <li><a href="/files/exhibits/Henkel/%233 Henkel Grandfathering Proposal Summary.pdf">Exhibit #3 Henkel Grandfathering Proposal Summary</a></li>
 </ul>
 </div>
