Charles Keating text update

--- a/src/views/actors/affiliates/Charles-Keating.hbs
+++ b/src/views/actors/affiliates/Charles-Keating.hbs
@@ -61,7 +61,7 @@ legislation that would benefit him and his company. When newly
 appointed Bank Board Chairman Ed Gray started proposing regulations 
 that disrupted Lincoln’s practices, Keating attempted to hire him out of his position. When this didn’t work, some believed that Keating leaked 
 multiple <a href="/evidence" title="" target="">incriminating stories</a> about Gray to the press in an effort to 
-“drive him out of his job.”  In 1987, Keating also sent ACC lawyer and Keating’s chief legal counsel, James Grogan, a memo to “Get Black” – the San Francisco regulator closest to Gray, who took copious notes at the April 9th Keating Five meeting. Keating told</p><p>
+“drive him out of his job.”  In 1987, Keating also sent ACC lawyer and Keating’s chief legal counsel, James Grogan, a <a href="/files/exhibits/Lincoln/%234%20_Get%20Black_%20Memo%2007-15-87.jpeg">memo</a> to “Get Black” – the San Francisco regulator closest to Gray, who took copious notes at the April 9th Keating Five meeting.</p><p>
 It was Grogan who did a significant amount of Keating’s political lobbying. During the hearings,
 Grogan claims that Riegle was the chief organizer of the 
 Keating Five meetings. He says Riegle was the first one to tell him that Gray would 
