Update timeline data

--- a/src/views/timeline.hbs
+++ b/src/views/timeline.hbs
@@ -2,8 +2,7 @@
 name: timeline
 ---
 <p>Click and drag or use scroll wheel to navigate.
-Hover over event to see details below.
-Jan-May 1987 is expanded in the second timeline below.<br />
+Click event to see details below.<br />
 Click <a href="/timeline-data">here</a> for data in table format.</p>
 
     
