--- a/src/views/videos/Gray - Part I.hbs
+++ b/src/views/videos/Gray - Part I.hbs
@@ -1,7 +1,7 @@
 ---
 name: actors
 ---
-<object id='cspan-video-player' classid='clsid:d27cdb6eae6d-11cf-96b8-444553540000' codebase='http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0' align='middle' height='330' width='512'><param name='allowScriptAccess' value='true'/><param name='movie' value='http://static.c-span.org/assets/swf/CSPANPlayer.1411659020.swf?clipid=4509741'/><param name='quality' value='high'/><param name='bgcolor' value='#ffffff'/><param name='allowFullScreen' value='true'/><param name='flashvars' value='system=http://www.c-span.org/common/services/flashXml.php?clipid=4509741&style=inline&version=2014-01-23'/><embed name='cspan-video-player' src='http://static.c-span.org/assets/swf/CSPANPlayer.1411659020.swf?clipid=4509741' allowScriptAccess='always' bgcolor='#ffffff' quality='high' allowFullScreen='true' type='application/x-shockwave-flash' pluginspage='http://www.macromedia.com/go/getflashplayer' flashvars='system=http://www.c-span.org/common/services/flashXml.php?clipid=4509741&style=inline&version=2014-01-23' align='middle' height='330' width='512'></embed></object>
+<iframe width=512 height=330 src=//www.c-span.org/video/standalone/?c4509741 allowfullscreen=allowfullscreen frameborder=0></iframe>
 <br />
 <a href="/files/evidence/34">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
