--- a/src/views/videos/VanPaasschen.hbs
+++ b/src/views/videos/VanPaasschen.hbs
@@ -1,7 +1,7 @@
 ---
 name: actors
 ---
-<iframe width="512" height="330" src="//www.c-span.org/video/standalone/?c4466753" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+<iframe frameborder='0' width='512' height='330' scrollable='no' src='https://www.c-span.org/video/standalone/?c4679216'></iframe>
 <br />
 <a href="/files/transcripts/Testimony - Gwendolyn VanPaaschen, McCain's Banking Aide, Part 1.pdf">Click here for transcript</a><br />
 <a href="javascript:history.go(-1);">Click here to go back</a>
