Senators -> senators in all files

--- a/src/views/actors/senators/John-McCain.hbs
+++ b/src/views/actors/senators/John-McCain.hbs
@@ -82,7 +82,7 @@ stated that she had called Jack Atchison (author of Arthur Young letter), and th
 he had made in his letter (VanPaasschen can't remember if McCain had this information on the 22nd or the 23rd). On 
 March 27th, McCain alerted VanPaachen that there was going to be a meeting with Ed Gray, and that he planned to attend 
 (according to VanPaasschen, McCain also informed her that the other four senators would also attend the meeting. McCain 
-says he wasn't aware until April 1st that other Senators would be in attendance). McCain asked VanPaasschen to prepare 
+says he wasn't aware until April 1st that other senators would be in attendance). McCain asked VanPaasschen to prepare 
 a memo with background information for the meeting. Although VanPaasschen strongly advised against any kind of meeting, 
 "He [McCain] said that he was going because, in spite of his rift with Charlie Keating, there were still 2,000 people 
 under the employment of ACC in Arizona."&nbsp;<br></p><p>On April 1st, VanPaasschen went to Laurie Sedlmayr's office to 
