--- a/src/views/actors/affiliates/Charles-Keating.hbs
+++ b/src/views/actors/affiliates/Charles-Keating.hbs
@@ -65,19 +65,19 @@ multiple <a href="/evidence" title="" target="">incriminating stories</a> about 
 It was Grogan who did a significant amount of Keating’s political lobbying. During the hearings,
 Grogan claims that Riegle was the chief organizer of the 
 Keating Five meetings. He says Riegle was the first one to tell him that Gray would 
-meet with the Senators. Grogan also claims that Riegle repeatedly 
+meet with the senators. Grogan also claims that Riegle repeatedly 
 asked him to convince DeConcini and McCain to attend the meeting 
 with Gray and to get McCain to send a letter inviting Riegle to the 
 meeting. Grogan also sent the <a href="/files/exhibits/Lincoln/%233%20Arthur%20Young%20Letter%2003-17-87.pdf">“Arthur Young” letter</a>, which was 
 written by Jack Atchison and that concluded that Federal regulators 
 were “harassing” Lincoln by being “unduly harsh.”</p><p>
 After the April 2nd meeting, Keating received word that the 
-Senators were extremely frustrated with the lack of information Gray 
+senators were extremely frustrated with the lack of information Gray 
 had provided. Keating sent Grogan to D.C. to “keep the team 
-together.” Grogan met with each of the Senators to reiterate how 
+together.” Grogan met with each of the senators to reiterate how 
 important their presence at the second meeting was to Keating. 
 Keating also sent DeConcini a “schedule” of the topics he wanted the 
-Senators to discuss with the regulators. There is evidence that this schedule circulated among the Senators and some of their staff. After 
+senators to discuss with the regulators. There is evidence that this schedule circulated among the senators and some of their staff. After 
 the April 9th meeting, Senator Glenn told Grogan that he didn’t think 
 the Bank Board was going to be able to help them. Both Grogan and 
 Keating entirely terminated their inquiries into the regulation, which 
