--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -2,11 +2,7 @@
 name: home
 ---
 <div class="navpic">
-  <img src="/img/actors/Alan-Cranston.jpg" title="Sen. Alan Cranston" />
-  <img src="/img/actors/Dennis-DeConcini.jpg" title="Sen. Dennis DeConcini" />
-  <img src="/img/actors/John-Glenn.jpg" title="Sen. John Glenn" />
-  <img src="/img/actors/John-McCain.jpg" title="Sen. John McCain" />
-  <img src="/img/actors/Don-Riegle.jpg" title="Sen. Don Riegle" />
+  <img src="/img/banner.png" alt="Keating Five Banner" style="max-width: 100%;" />
 </div>
 
 <p>Welcome to "Understanding the Keating Five," the only comprehensive 
