--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -1,20 +1,21 @@
 ---
 name: evidence
 ---
-<div class="center"><h2>Additional Information</h2>
-<div>
-<h3>Acronyms List</h3>
-ACC – American Continental Corporation<br />
-FDIC – Federal Deposit Insurance Corporation<br />
-FHLB-SF – Federal Home Loan Bank of San Francisco<br />
-FHLBB – Federal Home Loan Bank Board<br />
-FSLIC – Federal Savings and Loan Insurance Corporation<br />
-RTC – Resolution Trust Corporation<br />
-S&L – Savings & loan bank (i.e. thrift bank)<br />
-</div>
-<div class="evidence-wrapper">
-<div class="evidence-panel">
-    <h3>News Articles</h3>
+<div class="center">
+  <h2>Additional Information</h2>
+  <div>
+    <h3>Acronyms List</h3>
+    ACC – American Continental Corporation<br />
+    FDIC – Federal Deposit Insurance Corporation<br />
+    FHLB-SF – Federal Home Loan Bank of San Francisco<br />
+    FHLBB – Federal Home Loan Bank Board<br />
+    FSLIC – Federal Savings and Loan Insurance Corporation<br />
+    RTC – Resolution Trust Corporation<br />
+    S&L – Savings & loan bank (i.e. thrift bank)<br />
+  </div>
+  <div class="evidence-wrapper">
+    <div class="evidence-panel">
+      <h3>News Articles</h3>
                 <a href="/files/evidence/2">$1.1 Billion Ban Fraud Suit Filed</a><br />
                 <a href="/files/evidence/3">Bank Board Clears Henkel of Conflict Charge</a><br />
                 <a href="/files/evidence/4">S&amp;L Regulator Feuds With Lincoln Chief</a><br />
@@ -27,6 +28,12 @@ S&L – Savings & loan bank (i.e. thrift bank)<br />
                 <a href="/files/evidence/11">Bank Board Chief, Critic Are Feuding</a><br />
                 <a href="/files/evidence/12">The Savings and Loan Crisis</a><br />
                 <a href="/files/evidence/13">Auditors Of Lincoln On the Spot</a>
+    </div>
+  </div>
+  <div>
+    <h3>Background on the S&amp;L Crisis</h3>
+    Glassman, James K. <a href="/files/downloads/SL-Background-Glassman-Overview.pdf">"The Great Banks Robbery"</a>. <i>The New Republic</i>, October 8, 1990.<br />
+    Edwin Gray, FHLB Chair, Senate Ethics Committee Hearing. <a href="/files/downloads/SL-Background-Ed-Gray-Testimony.pdf">Excerpt from Opening Statement</a>.
+  </div>
 </div>
-    
-</div></div>
+
