Update text in Enduring Issues Constituent Service

--- a/src/views/enduring.hbs
+++ b/src/views/enduring.hbs
@@ -11,7 +11,19 @@ name: enduring
 
 <div class="enduring-page" id="page1">
 <h3>Constituent Service</h3>
-<p>After the Keating Five case ended, the Senate formed a committee to consider new rules concerning constituent service and involvement with administrative agencies. That committee ultimately made recommendations that focused largely on campaign donations and avoiding any nexus between actual donations and specific acts of constituent service. Those recommendations leave open the question of how to distinguish proper forms of constituent service from improper ones. For more information click <a href="/resources">here</a>.</p>
+<p>After the Keating Five case ended, the Senate formed a committee to consider new rules concerning constituent service and involvement with administrative agencies. That committee made recommendations that focused largely on campaign donations and avoiding any nexus between actual donations and specific acts of constituent service. Those recommendations leave open the question of how to distinguish proper forms of constituent service from improper ones.</p>
+<p>For the Senate, <a href="https://www.ethics.senate.gov/public/index.cfm/constituentservice">Rule 43</a> of the Ethics Rules provides general guidance about constituent service.</p>
+<p>For the House, there is an <a href="http://keatingfive.org/files/downloads/Constituent-Service-2.pdf">Advisory Opinion</a> on the matter that was issued in 1970. The House Ethics Manual (April 1992) also provides <a href="http://keatingfive.org/files/downloads/House-Ethics-Manual.pdf">guidance on casework</a>.</p>
+<p>There has not been another case similar to the Keating Five since, but there have been a few controversies about constituent service that have raised questions about the ethical limits of interactions with administrative agencies:</p>
+<ol>
+  <li>
+    <p>Senator Tom Daschle and U.S. Forest Service air safety inspections.</p>
+    <p>Senator Tom Daschle (D-South Dakota) championed efforts to remove the authority of the U.S. Forest Service to inspect small air charter services. Forest Service inspectors had been highly critical of B&L Aviation, a company owned by a friend and campaign contributor of Daschles. One of the companys planes was involved in a fatal crash in 1994 and 60 Minutes later aired a story suggesting that Daschle had impeded the imposition of more rigorous inspections. <a href="http://articles.latimes.com/1995-02-18/news/mn-33376_1_forest-service">Daschle denied any wrongdoing</a>. As his lawyer put it: The political influence used was the influence of a United States senator trying to pass a piece of legislation that he believed in and thought was right. (The cause of the crash was ultimately determined to be pilot error, not equipment failure).</p>
+  </li>
+  <li>
+    <p>Representative Maxine Waters and OneUnited Bank.</p>
+    <p>The House Ethics Committee <a href="http://articles.latimes.com/2010/aug/10/nation/la-na-maxine-waters-20100810">brought three charges</a> against Representative Maxine Waters in 2010 involving efforts to intercede with OneUnited Bank. Waters husband, Sidney Williams, had served on the board of directors of the bank and owned several hundred thousand dollars of stock. Waters defended her actions as part of her commitment to promote opportunity for minority-owned businesses and lending in underserved communities. The case was highly contested and Waters was ultimately <a href="https://www.washingtonpost.com/blogs/2chambers/post/california-rep-waters-cleared-of-ethics-charges/2012/09/21/75d346c2-03f3-11e2-8102-ebee9c66e190_blog.html">cleared of charges</a>.</p>
+</ol>
 </div>
 
 <div class="enduring-page" id="page2">
