Add note to timeline

--- a/src/views/timeline.hbs
+++ b/src/views/timeline.hbs
@@ -1,9 +1,12 @@
 ---
 name: timeline
 ---
-<p>Click and drag or use scroll wheel to navigate.
-Click event to see details below.<br />
-Click <a href="/timeline-data">here</a> for data in table format.</p>
+<p>
+  Click and drag or use scroll wheel to navigate.
+  Click event to see details below.<br />
+  Click <a href="/timeline-data">here</a> for data in table format.<br />
+  Items with words surrounded by {} link to exhibits.
+</p>
 
     
 <div id="tl" class="timeline-default" style="height: 400px;">
