Add spaces between braces on timeline

--- a/src/views/timeline.hbs
+++ b/src/views/timeline.hbs
@@ -5,7 +5,7 @@ name: timeline
   Click and drag or use scroll wheel to navigate.
   Click event to see details below.<br />
   Click <a href="/timeline-data">here</a> for data in table format.<br />
-  Items with words surrounded by {} link to exhibits.
+  Items with words surrounded by {&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;} link to exhibits.
 </p>
 
     
